# yaha

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  LICENSE  README.md  blocklists.json  compile_blocklist.py  pyproject.toml  requirements.txt  state.json  whitelist.txt
.github/workflows/: annual-cleanup.yml  compile-cached.yml  update-blocklist.yml
src/: __init__.py  cache_manager.py  cli.py  config.py  domain_processor.py  fetcher.py  hosts_generator.py  pipeline.py  state_manager.py
tests/: __init__.py  conftest.py  test_cache_manager.py  test_config.py  test_domain_processor.py  test_fetcher.py  test_hosts_generator.py  test_integration.py  test_pipeline.py  test_state_manager.py
